sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: not found: value testFini
    	if (plusPetit(i, i+1) == false) {echange(i, i+1); testFini = 1}
                                                          ^